--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 fastapi==0.110.0
-google-generativeai==0.5.2
 openai==1.3.4
 openai-whisper==20231117
 python-multipart==0.0.9
-pytube==15.0.0
+pytubfix==6.5.1                  
 torch==2.1.1
 tqdm==4.66.1
 uvicorn==0.28.0
+google-generativeai==0.3.1
+asyncio
+sse-starlette
